# Wolf-Compiler

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  configure.ac  wolf.cc
src/assembly/: Makefile.am  all_nodes.hh  allocate-stack.cc  allocate-stack.hh  assembly_node.hh  binary.cc  binary.hh  cdq.cc  cdq.hh  cmp.cc  cmp.hh  code-emission.cc  code-emission.hh  comment.cc  comment.hh  dec.cc  dec.hh  func_def.cc  func_def.hh  idiv.cc  idiv.hh  immediate.cc  immediate.hh  inc.cc  inc.hh  ins-list.cc  ins-list.hh  instruction.hh  jump.cc  jump.hh  jumpcc.cc  jumpcc.hh  label.cc  label.hh  mov.cc  mov.hh  operand.hh  program.cc  program.hh  pseudo.cc  (+11 more)
src/ast_nodes/: Makefile.am  all_nodes.hh  assign.cc  assign.hh  ast.hh  binary-exp.cc  binary-exp.hh  bindable.hh  binder.cc  binder.hh  block-item.hh  block.cc  block.hh  break.cc  break.hh  conditional.cc  conditional.hh  continue.cc  continue.hh  dec-list.cc  dec-list.hh  declaration.hh  decrement.cc  decrement.hh  do-while.cc  do-while.hh  exp-list.cc  exp-list.hh  exp.hh  for-init.hh  for.cc  for.hh  function-dec.cc  function-dec.hh  goto.cc  goto.hh  if.cc  if.hh  increment.cc  increment.hh  (+31 more)
src/ast_visitor/: Makefile.am  assembly-generation.cc  assembly-generation.hh  assembly-generation.hxx  pretty-printer.cc  visitor.hh  visitor.hxx
src/driver/: Makefile.am  wold_driver.cc  wolf-driver.cc  wolf-driver.hh  wolf_driver.cc  wolf_driver.hh
src/lexer/: Makefile.am  lexer.cc  lexer.hh  scan-wolf.cc  scan-wolf.hh  scan-wolf.ll  token.cc  token.hh  token_repr.cc
src/misc/: Makefile.am  debug.cc  debug.hh  defer.hh  error.cc  error.hh  error.hxx  format-helper.cc  format-helper.hh  format_helper.cc  format_helper.hh  location.cc  location.hh  location.hxx  scoped-map.hh  scoped-map.hxx
src/parser/: Makefile.am  parse-block-item.cc  parse-declaration.cc  parse-exp.cc  parse-external-declaration.cc  parse-factor.cc  parse-function-declaration.cc  parse-statement.cc  parse-type.cc  parser.cc  parser.hh
src/visitor/: Makefile.am  asm_visitor.hh  asm_visitor.hxx  assembly-generation.cc  assembly-generation.hh  assembly-generation.hxx  ast_visitor.hh  ast_visitor.hxx  code-emission.cc  code-emission.hh  pretty-printer.cc  pretty-printer.hh  visitor.hh  yakir-generation.cc  yakir-generation.hh  yakir-generation.hxx  yakir_visitor.hh  yakir_visitor.hxx
src/yakir/: Makefile.am  all_nodes.hh  arit-binary.cc  arit-binary.hh  binary.cc  binary.hh  constant.cc  constant.hh  copy.cc  copy.hh  decrement.cc  decrement.hh  func_def.cc  func_def.hh  immediate.cc  immediate.hh  increment.cc  increment.hh  ins-list.cc  ins-list.hh  instruction.hh  jump-if-not-zero.cc  jump-if-not-zero.hh  jump-if-zero.cc  jump-if-zero.hh  jump.cc  jump.hh  label.cc  label.hh  logical-binary.cc  logical-binary.hh  mov.cc  mov.hh  operand.hh  pretty_printer.cc  pretty_printer.hh  program.cc  program.hh  register.cc  register.hh  (+8 more)
tests/: testsuite.py
