lib_LIBRARIES = libast_nodes.a

libast_nodes_a_SOURCES =  \
	all_nodes.hh \
  	pretty-printer.cc \
  	pretty-printer.hh \
  	binder.hh \
  	binder.cc \
  	renamer.cc \
  	renamer.hh \
	ast.hh \
	block-item.hh \
	goto.cc \
	goto.hh \
	label.cc \
	label.hh \
	bindable.hh \
	stmt.hh \
	null.hh \
	null.cc \
	stmt-exp.hh \
	stmt-exp.cc \
	declaration.hh \
	dec-list.hh \
	dec-list.cc \
	exp.hh \
	function-dec.hh \
	function-dec.cc \
	number-exp.hh 	\
	number-exp.cc 	\
	return.hh 	\
	return.cc 	\
	string-exp.hh 	\
	string-exp.cc 	\
	unary-exp.hh 	\
	unary-exp.cc 	\
	increment.hh 	\
	increment.cc 	\
	decrement.hh 	\
	decrement.cc 	\
	binary-exp.hh 	\
	binary-exp.cc 	\
	block.hh \
	block.cc \
	var.cc \
	var.hh \
	assign.cc \
	assign.hh \
	var-dec.hh \
	var-dec.cc \
	if.hh \
	if.cc \
	conditional.hh \
	conditional.cc \
	loop-stmt.hh \
	for-init.hh \
	for.cc \
	for.hh \
	while.hh \
	while.cc \
	do-while.cc \
	do-while.hh \
	break.hh \
	break.cc \
	continue.cc \
	continue.hh \
	type-name.hh 	\
	type-name.cc 	\
	type.hh


libast_nodes_a_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/misc -I$(top_srcdir)/src/driver -I$(top_srcdir)/src/visitor

noinst_LIBRARIES = libast_nodes.a
