lib_LIBRARIES = libmisc.a

libmisc_a_SOURCES =  \
  defer.hh \
  scoped-map.hh \
  scoped-map.hxx \
  location.cc \
  location.hh \
  location.hxx \
  format-helper.cc \
  format-helper.hh \
  error.cc \
  error.hh \
  error.hxx \
  debug.cc \
  debug.hh

libmisc_a_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libmisc.a
