lib_LIBRARIES = libparser.a

libparser_a_SOURCES =  \
  parser.cc \
  parser.hh \
  parser-utils.cc \
  parser-utils.hh

libparser_a_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/misc -I$(top_srcdir)/src/driver -I$(top_srcdir)/src/lexer -I$(top_srcdir)/src/ast_nodes

noinst_LIBRARIES = libparser.a

