lib_LIBRARIES = libvisitor.a

libvisitor_a_SOURCES =  \
  yakir-generation.cc  \
  yakir-generation.hh  \
  yakir-generation.hxx \
  ast_visitor.hh  \
  ast_visitor.hxx \
  yakir_visitor.hh  \
  yakir_visitor.hxx

libvisitor_a_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/misc -I$(top_srcdir)/src/driver -I$(top_srcdir)/src/ast_nodes -I$(top_srcdir)/src/yakir -I$(top_srcdir)/src/assembly

noinst_LIBRARIES = libvisitor.a
